[gd_scene load_steps=5 format=3 uid="uid://dvewtmm6d837k"]

[ext_resource type="FontFile" uid="uid://b53p8162s1mf7" path="res://fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://bw5u10q1xw4pq" path="res://HUD.gd" id="1_64ctp"]

[sub_resource type="InputEventAction" id="InputEventAction_37p78"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_64ctp"]
events = [SubResource("InputEventAction_37p78")]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 462.0
offset_bottom = 146.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 56.0
offset_right = 460.0
offset_bottom = 261.0
grow_horizontal = 2
text = "






Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 115.0
offset_top = 487.0
offset_right = 315.0
offset_bottom = 587.0
grow_horizontal = 2
grow_vertical = 0
shortcut = SubResource("Shortcut_64ctp")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
